# sosaia-preprocessing-rust

./: CLAUDE.md  Cargo.toml  README.md
src/: args.rs  chunk_export.rs  data_processing.rs  greedy_mesher.rs  main.rs  material_ids.rs  mesh_export.rs
src/world_editor/: common.rs  mod.rs
testdata/: new-york.json  sample_overpass.json
