[package]
name = "sosaia-preprocessing"
version = "0.1.0"
edition = "2021"
description = "Sosaia preprocessing pipeline — converts OSM data to binary chunk files"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.0.0"
dirs = "6.0.0"
fastanvil = "0.32.0"
fastnbt = "2.6.0"
flate2 = "1.1"
fnv = "1.0.7"
fs2 = "0.4"
geo = "0.32.0"
image = "0.25"
indicatif = "0.18.4"
itertools = "0.14.0"
once_cell = "1.21.3"
rand = { version = "0.9.1", features = ["std", "std_rng"] }
rand_chacha = "0.9"
rayon = "1.10.0"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
